<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="pharmacy"
            type="com.zoramedic.zoramedicapp.data.Pharmacy" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/chat_background_input"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:maxLines="1"
            android:text="@{pharmacy != null ? pharmacy.name : null}"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9"/>

        <TextView
            android:id="@+id/quantityView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/quantity"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/quantity"
            app:layout_constraintStart_toStartOf="@id/quantity"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/minimalLimitView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/minimal_limit"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/minimalLimit"
            app:layout_constraintEnd_toEndOf="@id/minimalLimit"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/priceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/price"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/price"
            app:layout_constraintStart_toStartOf="@id/price"
            app:layout_constraintEnd_toEndOf="@id/price"
            app:layout_constraintTop_toBottomOf="@+id/name" />


        <EditText
            android:id="@+id/quantity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/pharmacy_new_background_input"
            android:gravity="center"
            android:inputType="number"
            android:padding="8dp"
            android:text="@{pharmacy != null ? Integer.toString(pharmacy.quantity) : null}"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@id/quantityView" />

        <EditText
            android:id="@+id/minimalLimit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/pharmacy_new_background_input"
            android:textCursorDrawable="@drawable/cursor_color"
            android:gravity="center"
            android:inputType="number"
            android:padding="8dp"
            android:text="@{pharmacy != null ? Integer.toString(pharmacy.minimalLimit) : null}"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintStart_toEndOf="@+id/quantity"
            app:layout_constraintTop_toBottomOf="@+id/minimalLimitView" />

        <EditText
            android:id="@+id/price"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/pharmacy_new_background_input"
            android:gravity="center"
            android:inputType="number"
            android:padding="8dp"
            android:text="@{pharmacy != null ? Integer.toString(pharmacy.price) : null}"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/priceView" />

        <ToggleButton
            android:id="@+id/perOs"
            android:checked="@{pharmacy != null ? pharmacy.perOs : false}"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/green"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textOff="@string/parenteralna_th"
            android:textOn="@string/per_os_th"
            android:textSize="@dimen/_8ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/minimalLimit"
            app:layout_constraintEnd_toEndOf="@id/minimalLimit"
            app:layout_constraintTop_toBottomOf="@+id/minimalLimit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>